chore: drop unrelated deprecation cleanup from this branch
Keeps this branch dedicated to the unit test memory problem. The
new Integer/new Long warnings in FlagTest are unrelated noise and
belong on their own branch.

Co-authored-by: Cursor <cursoragent@cursor.com>